--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Intro to AJAX Practice Tasks</title>
-    <script src="src/index.js" charset="utf-8"></script>
+    <script defer src="src/index.js" charset="utf-8"></script>
   </head>
   <body>
     <h1>Dog CEO</h1>
@@ -19,6 +19,7 @@
       <option value="b">b</option>
       <option value="c">c</option>
       <option value="d">d</option>
+      <option value="e">e</option>
     </select>
 
     <ul id="dog-breeds">
